[VERSION-2] Using custom user details service to load user from database

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,17 @@ spring:
 #    user:
 #      name: admin
 #      password: admin
+  datasource:
+    url: jdbc:h2:file:./data/mydb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 server:
   port: 10
